clusters/hive/apps/archive/apps/freshrss/k8s-manifests/freshrss-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss
  namespace: freshrss
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: "traefik"
  rules:
    - host: rss.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: freshrss
                port:
                  number: 80
            path: /
            pathType: Prefix
